# SakuraTestApp

./: CMakeLists.txt
Data/: .gitignore  Cube.sak  GreenSphere.sak  SaBasicEffect_f.cg  SaBasicEffect_f.glsl  SaBasicEffect_v.cg  SaBasicEffect_v.glsl  SaBasicModelEffect_f.cg  SaBasicModelEffect_f.glsl  SaBasicModelEffect_v.cg  SaBasicModelEffect_v.glsl  SaDebugEffect_f.cg  SaDebugEffect_f.glsl  SaDebugEffect_v.cg  SaDebugEffect_v.glsl  SaSpriteEffect_f.cg  SaSpriteEffect_f.glsl  SaSpriteEffect_v.cg  SaSpriteEffect_v.glsl  Sphere.sak  Suzanne.sak
Project/: .gitignore
Source/: CMakeLists.txt  TestAppGame.cpp  TestAppGame.h  main.cpp
